@@ -181,12 +181,11 @@ mesos::internal::master::Flags::Flags()
       "Human readable name for the cluster,\n"
       "displayed in the webui.");
 
-  // TODO(vinod): Deprecate this in favor of '--acls'.
   add(&Flags::roles,
       "roles",
-      "A comma-separated list of the allocation\n"
-      "roles that frameworks in this cluster may\n"
-      "belong to.");
+      "A comma-separated list of the allocation roles that frameworks\n"
+      "in this cluster may belong to. This flag is deprecated;\n"
+      "if it is not specified, any role name can be used.");
 
   add(&Flags::weights,
       "weights",
