@@ -3,6 +3,7 @@ Release Notes - Mesos - Version 0.27.0 (WIP)
 
 ** API Changes:
   * [MESOS-2315] - Removed deprecated CommandInfo::ContainerInfo.
+  * [MESOS-3988] - Implicit roles.
 
 
 Release Notes - Mesos - Version 0.26.0
